--- a/Calculadora.css
+++ b/Calculadora.css
@@ -11,18 +11,18 @@
 
 header{
 height: 50px;
-color:maroon;
+color:black;
 }
 
 
 #resultado{
-    width: 100px;
+    width: 150px;
     border: 1px solid white;
     margin: auto;
 }
 
 input,#resultado{
-    width: 100px;
+    min-width: 200px;
     padding: 3px;
     margin: 5px auto;
     background-color: black;
